fixed media quiries and spacing

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -564,11 +564,16 @@ z-index: 1;
 @media only screen and (max-width: 600px) {
 
     #intro h1 {
-        font-size: 2.2rem;
+        font-size: 5rem;
+        padding-bottom: 5rem;
     }
 
     #intro p {
         margin: 0 7rem;
+    }
+
+    #intro #cards-wrapper {
+        flex-direction: column;
     }
 
     #about .slide .info h2 {
@@ -599,6 +604,10 @@ z-index: 1;
         object-fit: cover;
     }
     
+    .history-content h1 {
+        margin-top: 5rem;
+    }
+
     .contact {
         padding: 6rem 0;
     }
@@ -635,67 +644,6 @@ z-index: 1;
     }
 }
 
-/* Small devices (portrait tablets and large phones, 600px and up) */
-@media only screen and (min-width: 600px) {
-    #intro h1 {
-        font-size: 2.2rem;
-    }
-
-    #intro p {
-        margin: 0 7rem;
-    }
-
-    .img-slider .slide .info h2 {
-        font-size: 4rem;
-        margin-left: -8rem;
-    }
-
-    .img-slider .slide .info p {
-        padding: 1rem 0;
-        width: 100%;
-        margin-left: -4rem;
-
-    }
-    
-    .slide img {
-        object-fit: cover;
-    }
-    
-    .contact {
-        padding: 6rem 0;
-    }
-
-    .contact .content{
-        max-width: 90%;
-    }
-
-
-    .contact-wrapper {
-        display: inline-flex;
-        flex-direction: column;
-        width: 100%;
-        margin: 0;
-    }
-
-    .contact .contact-info {
-        width: 100%;
-        max-width: 100%;
-        margin-right: 0;
-        margin-left: 6rem;
-    }
-
-    .contact .contact-info .info-box {
-        display: flex;
-    }
-
-    .contact .contact-info .info-box .icon {
-        width: 6rem;
-    }
-
-    .contact .contact-form {
-        width: auto;
-    }
-}
 //KeyFrame code starts here
   
 // Keyframe code ends here
